@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "    ] ;\n",
     "    sh:property [\n",
     "        sh:path schema:gender ;\n",
-    "        sh:in ( \"female\" \"male\" ) ;\n",
+    "        sh:in ( \"female\" \"male\" \"nonbinary\" \"self-descr\" ) ;\n",
     "    ] ;\n",
     "    sh:property [\n",
     "        sh:path schema:address ;\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,31 +254,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_:ub2bL12C28 sh:node schema:AddressShape\n",
-      "_:ub2bL12C28 sh:path schema:address\n",
-      "_:ub2bL15C9 rdf:type sh:ValidationResult\n",
-      "_:ub2bL15C9 sh:focusNode <http://example.org/ns#Bob>\n",
-      "_:ub2bL15C9 sh:resultMessage \"Value of <http://example.org/ns#Bob>->schema:deathDate <= Literal(\\\"1971-07-07\\\")\"\n",
-      "_:ub2bL15C9 sh:resultPath schema:birthDate\n",
-      "_:ub2bL15C9 sh:resultSeverity sh:Violation\n",
-      "_:ub2bL15C9 sh:sourceConstraintComponent sh:LessThanConstraintComponent\n",
-      "_:ub2bL15C9 sh:sourceShape _:ub2bL21C28\n",
-      "_:ub2bL15C9 sh:value \"1971-07-07\"\n",
-      "_:ub2bL21C28 sh:lessThan schema:deathDate\n",
-      "_:ub2bL21C28 sh:maxCount \"1\"^^xsd:integer\n",
-      "_:ub2bL21C28 sh:path schema:birthDate\n",
+      "_:ub2bL12C28 sh:lessThan schema:deathDate\n",
+      "_:ub2bL12C28 sh:maxCount \"1\"^^xsd:integer\n",
+      "_:ub2bL12C28 sh:path schema:birthDate\n",
+      "_:ub2bL16C9 rdf:type sh:ValidationResult\n",
+      "_:ub2bL16C9 sh:focusNode <http://example.org/ns#Bob>\n",
+      "_:ub2bL16C9 sh:resultMessage \"Value does not conform to Shape schema:AddressShape\"\n",
+      "_:ub2bL16C9 sh:resultPath schema:address\n",
+      "_:ub2bL16C9 sh:resultSeverity sh:Violation\n",
+      "_:ub2bL16C9 sh:sourceConstraintComponent sh:NodeConstraintComponent\n",
+      "_:ub2bL16C9 sh:sourceShape _:ub2bL22C28\n",
+      "_:ub2bL16C9 sh:value <http://example.org/ns#BobsAddress>\n",
+      "_:ub2bL22C28 sh:node schema:AddressShape\n",
+      "_:ub2bL22C28 sh:path schema:address\n",
       "_:ub2bL4C1 rdf:type sh:ValidationReport\n",
       "_:ub2bL4C1 sh:conforms \"false\"^^xsd:boolean\n",
-      "_:ub2bL4C1 sh:result _:ub2bL15C9\n",
+      "_:ub2bL4C1 sh:result _:ub2bL16C9\n",
       "_:ub2bL4C1 sh:result _:ub2bL6C15\n",
       "_:ub2bL6C15 rdf:type sh:ValidationResult\n",
       "_:ub2bL6C15 sh:focusNode <http://example.org/ns#Bob>\n",
-      "_:ub2bL6C15 sh:resultMessage \"Value does not conform to Shape schema:AddressShape\"\n",
-      "_:ub2bL6C15 sh:resultPath schema:address\n",
+      "_:ub2bL6C15 sh:resultMessage \"Value of <http://example.org/ns#Bob>->schema:deathDate <= Literal(\\\"1971-07-07\\\")\"\n",
+      "_:ub2bL6C15 sh:resultPath schema:birthDate\n",
       "_:ub2bL6C15 sh:resultSeverity sh:Violation\n",
-      "_:ub2bL6C15 sh:sourceConstraintComponent sh:NodeConstraintComponent\n",
+      "_:ub2bL6C15 sh:sourceConstraintComponent sh:LessThanConstraintComponent\n",
       "_:ub2bL6C15 sh:sourceShape _:ub2bL12C28\n",
-      "_:ub2bL6C15 sh:value <http://example.org/ns#BobsAddress>\n"
+      "_:ub2bL6C15 sh:value \"1971-07-07\"\n"
      ]
     }
    ],
@@ -320,7 +320,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<kglab.kglab.KnowledgeGraph at 0x105d5e190>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import kglab\n",
     "\n",
@@ -406,6 +417,14 @@
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
+      "\tFocus Node: <https://www.food.com/recipe/61108>\n",
+      "\tValue Node: Literal(\"german pancakes  from the mennonite treasury of recipes\")\n",
+      "\tResult Path: skos:definition\n",
+      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
+      "\n",
+      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
+      "\tSeverity: sh:Violation\n",
+      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/261361>\n",
       "\tValue Node: Literal(\"german dumplings  spaetzle or kniffles  for soup or saute\")\n",
       "\tResult Path: skos:definition\n",
@@ -416,14 +435,6 @@
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/279314>\n",
       "\tValue Node: Literal(\"choux pastry  for profiteroles  cream puffs or eclairs\")\n",
-      "\tResult Path: skos:definition\n",
-      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
-      "\n",
-      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
-      "\tSeverity: sh:Violation\n",
-      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
-      "\tFocus Node: <https://www.food.com/recipe/61108>\n",
-      "\tValue Node: Literal(\"german pancakes  from the mennonite treasury of recipes\")\n",
       "\tResult Path: skos:definition\n",
       "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
       "\n"
@@ -466,6 +477,13 @@
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
+      "\tFocus Node: <https://www.food.com/recipe/61108>\n",
+      "\tValue Node: Literal(\"german pancakes  from the mennonite treasury of recipes\")\n",
+      "\tResult Path: skos:definition\n",
+      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
+      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
+      "\tSeverity: sh:Violation\n",
+      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/261361>\n",
       "\tValue Node: Literal(\"german dumplings  spaetzle or kniffles  for soup or saute\")\n",
       "\tResult Path: skos:definition\n",
@@ -475,13 +493,6 @@
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/279314>\n",
       "\tValue Node: Literal(\"choux pastry  for profiteroles  cream puffs or eclairs\")\n",
-      "\tResult Path: skos:definition\n",
-      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
-      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
-      "\tSeverity: sh:Violation\n",
-      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
-      "\tFocus Node: <https://www.food.com/recipe/61108>\n",
-      "\tValue Node: Literal(\"german pancakes  from the mennonite treasury of recipes\")\n",
       "\tResult Path: skos:definition\n",
       "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
       "\n"
@@ -549,9 +560,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>_:ub5bL14C9</td>\n",
-       "      <td>&lt;https://www.food.com/recipe/261361&gt;</td>\n",
+       "      <td>&lt;https://www.food.com/recipe/61108&gt;</td>\n",
        "      <td>skos:definition</td>\n",
-       "      <td>german dumplings  spaetzle or kniffles  for so...</td>\n",
+       "      <td>german pancakes  from the mennonite treasury o...</td>\n",
        "      <td>sh:MaxLengthConstraintComponent</td>\n",
        "      <td>String length not &lt;= Literal(\"50\", datatype=xs...</td>\n",
        "    </tr>\n",
@@ -567,9 +578,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>_:ub5bL30C9</td>\n",
-       "      <td>&lt;https://www.food.com/recipe/61108&gt;</td>\n",
+       "      <td>&lt;https://www.food.com/recipe/261361&gt;</td>\n",
        "      <td>skos:definition</td>\n",
-       "      <td>german pancakes  from the mennonite treasury o...</td>\n",
+       "      <td>german dumplings  spaetzle or kniffles  for so...</td>\n",
        "      <td>sh:MaxLengthConstraintComponent</td>\n",
        "      <td>String length not &lt;= Literal(\"50\", datatype=xs...</td>\n",
        "    </tr>\n",
@@ -580,15 +591,15 @@
       "text/plain": [
        "            id                                 focus             path  \\\n",
        "0  _:ub5bL6C15  <https://www.food.com/recipe/279314>  skos:definition   \n",
-       "1  _:ub5bL14C9  <https://www.food.com/recipe/261361>  skos:definition   \n",
+       "1  _:ub5bL14C9   <https://www.food.com/recipe/61108>  skos:definition   \n",
        "2  _:ub5bL22C9  <https://www.food.com/recipe/137158>  skos:definition   \n",
-       "3  _:ub5bL30C9   <https://www.food.com/recipe/61108>  skos:definition   \n",
+       "3  _:ub5bL30C9  <https://www.food.com/recipe/261361>  skos:definition   \n",
        "\n",
        "                                               value  \\\n",
        "0  choux pastry  for profiteroles  cream puffs or...   \n",
-       "1  german dumplings  spaetzle or kniffles  for so...   \n",
+       "1  german pancakes  from the mennonite treasury o...   \n",
        "2  pikkuleipienperustaikina  finnish butter cooki...   \n",
-       "3  german pancakes  from the mennonite treasury o...   \n",
+       "3  german dumplings  spaetzle or kniffles  for so...   \n",
        "\n",
        "                        constraint  \\\n",
        "0  sh:MaxLengthConstraintComponent   \n",
@@ -626,6 +637,59 @@
     "\n",
     "df = report_graph.query_as_df(sparql)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's visualize the `report_graph` as well, with the SHACL rule nodes highlighted in red, and the violations in orange:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"500px\"\n",
+       "            height=\"500px\"\n",
+       "            src=\"tmp.fig05.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x126f13550>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VIS_STYLE = {\n",
+    "    \"sh\": {\n",
+    "        \"color\": \"red\",\n",
+    "        \"size\": 20,\n",
+    "    },\n",
+    "    \"_\":{\n",
+    "        \"color\": \"orange\",\n",
+    "        \"size\": 30,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "subgraph = kglab.SubgraphTensor(report_graph)\n",
+    "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
+    "\n",
+    "pyvis_graph.force_atlas_2based()\n",
+    "pyvis_graph.show(\"tmp.fig05.html\")"
    ]
   },
   {
