@@ -13,6 +13,7 @@
   * created `SECURITY.md` security policy
   * using Snyk for security audits of dependencies
   * testing/correcting the PSL examples; kudos @louisguitton
+  * include first quote; kudos @kaaloo !
 
 
 ## 0.2.1
